--- a/js/todos_project/style.css
+++ b/js/todos_project/style.css
@@ -143,7 +143,7 @@ aside h2.completed_todos {
   background: transparent url('assets/images/icon_checked.png') no-repeat;
 }
 
-aside h2 span {
+aside h2 span.todos_left {
   color: #ffffff;
 	width: 27px;
 	height: 19px;
@@ -159,7 +159,7 @@ aside li a {
   line-height: 40px;
 }
 
-aside span {
+aside span.todos_left {
   float: right;
   background-color: #6b7292;
   border-radius: 100%;
@@ -168,10 +168,6 @@ aside span {
   width: 18px;
   text-align: center;
   margin-top: 10px; /* (a height(40px) - circle height(18px)) / 2 */
-}
-
-aside h2 span {
-
 }
 
 aside a.active {
@@ -212,7 +208,7 @@ main h1 {
   padding-bottom: 45px;
 }
 
-main h1 span {
+main h1 span#left_on_page {
   display: inline-block;
   margin-left: 20px;
   height: 18px;
@@ -233,6 +229,11 @@ main ul li {
   border-top: solid 1px #e7e7e7;
   padding-top: 18px;
   width: 100%;
+}
+
+h4#update {
+	padding: 10px;
+	font-size: 14px;
 }
 
 main ul li#clone {
@@ -267,6 +268,10 @@ main li span:hover {
 
 main li input[type="checkbox"]:checked ~ span {
   background: transparent url("assets/images/icon_checkbox_checked.png") no-repeat;
+}
+
+li > span {
+	padding-right: 10px;
 }
 
 .complete {
